# Gofile

./: README.md  pyproject.toml  requirements.txt
gofilepy/: __init__.py  gofile.py
