[tool.poetry]
name = "gofilepy"
version = "0.4.0"
description = "Upload files to Gofile.io"
authors = ["Mohammad Alyetama <malyetama@pm.me>", "Garnajee"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = ">=2.32.3"
rich = ">=13.9.4"
requests-toolbelt = ">=1.0.0"
tqdm = ">=4.67.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gofile = 'gofilepy:gofile.main'
gofilepy = 'gofilepy:gofile.main'
